--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,18 @@ body {
     background-color: beige;
 }
 
+h1 {
+    align-items: center;
+    color: blue;
+}
+
+.btn {
+    background-color: green;
+}
+#textSearch {
+    width: 100;
+    height: 30;
+}
 
 #makeDropDown{
     width: 50;
