--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,25 @@
 body {
-    background-color: beige;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-AKUGjohqcQfvpClM1xEmxnSlTERpi8FGnQ&usqp=CAU);
 }
 
-h1 {
-    align-items: center;
+header {
     color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .btn {
     background-color: green;
 }
-#textSearch {
-    width: 100;
-    height: 30;
-}
-
-#makeDropDown{
-    width: 50;
-    height: 10;
-}
 
 #search{
     background-color: white;
     position: top-right;
+}
+
+.list-group {
+    font-weight: bold;
+    font-size: larger;
+     color: blue;
 }
